@@ -25,18 +25,6 @@ name|apache
 operator|.
 name|cayenne
 operator|.
-name|CayenneRuntimeException
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|cayenne
-operator|.
 name|ResultIterator
 import|;
 end_import
@@ -253,7 +241,47 @@ name|java
 operator|.
 name|sql
 operator|.
-name|*
+name|Connection
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|sql
+operator|.
+name|PreparedStatement
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|sql
+operator|.
+name|ResultSet
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|sql
+operator|.
+name|SQLException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|sql
+operator|.
+name|Statement
 import|;
 end_import
 
@@ -457,8 +485,6 @@ specifier|protected
 name|BatchTranslator
 name|createTranslator
 parameter_list|()
-throws|throws
-name|CayenneRuntimeException
 block|{
 return|return
 name|dataNode
@@ -985,8 +1011,6 @@ name|row
 parameter_list|)
 throws|throws
 name|SQLException
-throws|,
-name|CayenneRuntimeException
 block|{
 name|ResultSet
 name|keysRS
