@@ -72,6 +72,8 @@ import|;
 end_import
 
 begin_class
+annotation|@
+name|Deprecated
 specifier|public
 class|class
 name|CayenneExceptionTest
@@ -85,11 +87,11 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-name|CayenneRuntimeException
+name|CayenneException
 name|ex
 init|=
 operator|new
-name|CayenneRuntimeException
+name|CayenneException
 argument_list|()
 decl_stmt|;
 name|assertNull
@@ -109,7 +111,7 @@ argument_list|()
 operator|.
 name|startsWith
 argument_list|(
-name|CayenneRuntimeException
+name|CayenneException
 operator|.
 name|getExceptionLabel
 argument_list|()
@@ -126,11 +128,11 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-name|CayenneRuntimeException
+name|CayenneException
 name|ex
 init|=
 operator|new
-name|CayenneRuntimeException
+name|CayenneException
 argument_list|(
 literal|"abc"
 argument_list|)
@@ -145,7 +147,7 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
-name|CayenneRuntimeException
+name|CayenneException
 operator|.
 name|getExceptionLabel
 argument_list|()
@@ -175,11 +177,11 @@ operator|new
 name|Throwable
 argument_list|()
 decl_stmt|;
-name|CayenneRuntimeException
+name|CayenneException
 name|ex
 init|=
 operator|new
-name|CayenneRuntimeException
+name|CayenneException
 argument_list|(
 name|cause
 argument_list|)
@@ -196,7 +198,7 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
-name|CayenneRuntimeException
+name|CayenneException
 operator|.
 name|getExceptionLabel
 argument_list|()
@@ -229,11 +231,11 @@ operator|new
 name|Throwable
 argument_list|()
 decl_stmt|;
-name|CayenneRuntimeException
+name|CayenneException
 name|ex
 init|=
 operator|new
-name|CayenneRuntimeException
+name|CayenneException
 argument_list|(
 literal|"abc"
 argument_list|,
@@ -252,7 +254,7 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
-name|CayenneRuntimeException
+name|CayenneException
 operator|.
 name|getExceptionLabel
 argument_list|()
@@ -275,11 +277,11 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-name|CayenneRuntimeException
+name|CayenneException
 name|ex
 init|=
 operator|new
-name|CayenneRuntimeException
+name|CayenneException
 argument_list|(
 literal|"x%sx%sx"
 argument_list|,
@@ -315,11 +317,11 @@ operator|new
 name|Throwable
 argument_list|()
 decl_stmt|;
-name|CayenneRuntimeException
+name|CayenneException
 name|ex
 init|=
 operator|new
-name|CayenneRuntimeException
+name|CayenneException
 argument_list|(
 literal|"x%sx%sx"
 argument_list|,
