@@ -20,6 +20,7 @@ CAY-2473 Modeler: cleanup attributes and relationship editors
 CAY-2474 Modeler: swap buttons in dialog toolbar
 CAY-2475 Modeler: move inheritance icon to name column in objAttr table and objRel table
 CAY-2481 Methods to return Object[] after SQLTemplate and SQLExec perform
+CAY-2487 Removed usage of CayenneException.
 
 Bug Fixes:
 
